@@ -10,7 +10,7 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: servconf.c,v 1.119 2003/05/15 01:48:10 jakob Exp $");
+RCSID("$OpenBSD: servconf.c,v 1.120 2003/05/15 04:08:44 jakob Exp $");
 
 #if defined(KRB4)
 #include <krb.h>
@@ -203,7 +203,11 @@ fill_default_server_options(ServerOptions *options)
 	if (options->kerberos_or_local_passwd == -1)
 		options->kerberos_or_local_passwd = 1;
 	if (options->kerberos_ticket_cleanup == -1)
+#if defined(KRB4) || defined(KRB5)
 		options->kerberos_ticket_cleanup = 1;
+#else
+		options->kerberos_ticket_cleanup = 0;
+#endif
 	if (options->kerberos_tgt_passing == -1)
 		options->kerberos_tgt_passing = 0;
 	if (options->afs_token_passing == -1)
