@@ -121,6 +121,9 @@
      http://bugzilla.mindrot.org/show_bug.cgi?id=560
      Privsep child continues to run after monitor killed.
      Pass monitor signals through to child; Darren Tucker
+   - jakob@cvs.openbsd.org 2003/05/15 04:08:44
+     [readconf.c servconf.c]
+     disable kerberos when not supported. ok markus@
  - (djm) Make portable build with MIT krb5 (some issues remain)
  - (djm) Add new UsePAM configuration directive to allow runtime control
    over usage of PAM. This allows non-root use of sshd when built with
